[package]
name = "m_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "sync", "net", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
reqwest = { version = "0.11", features = ["json"] }
alloy = { version = "0.6.4", features = [
    "rpc",
    "rpc-types",
    "rpc-client",
    "network",
    "providers",
    "eips",
    "transports",
    "transport-http",
    "consensus",
    "k256",
] }